[package]
name = "communication-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "utils"
path = "src/lib/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server/main.rs"

[[bin]]
name = "client"
path = "src/bin/client/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
bincode="1.3.3"
serde = { version = "1.0", features = ["derive"] }